<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.asa.meta.metaparty.viewmodel.MainViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.checkPhoneInfo()}"
                    android:text="@string/version_identification" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.switchLanguage()}"
                    android:text="@{viewModel.language}" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.openGallery()}"
                    android:text="@string/open_album" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.openCamera()}"
                    android:text="@string/turn_on_camera" />


                <Button
                    android:id="@+id/btn_check_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.checkNotifyPermission()}"
                    android:text="@{viewModel.notifyPermissionText}" />

                <Button
                    android:id="@+id/btn_expend_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.expNotify()}"
                    android:text="@string/expand_notification_bar" />

                <Button
                    android:id="@+id/btn_colloct_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.collNotify()}"
                    android:text="@string/contraction_notification_bar" />

                <Button
                    android:id="@+id/btn_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.downloadAPK()}"
                    android:text="@{viewModel.loadingText}" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.methodGet()}"
                    android:text="get" />


                <Button
                    android:id="@+id/notify2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onClickNotify2()}"
                    android:text="发送通知类型" />

                <Button
                    android:id="@+id/xiaomi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.openMIUINotifySetting()}"
                    android:text="小米" />

                <Button
                    android:id="@+id/huawei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.openEMUINotifySetting()}"
                    android:text="华为" />

                <Button
                    android:id="@+id/meizhu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="魅族" />

                <Button
                    android:id="@+id/oppo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="oppo" />

                <Button
                    android:id="@+id/samsung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="三星" />

                <Button
                    android:id="@+id/oneplus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="一加" />

                <Button
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="其他" />


                <TextView
                    android:id="@+id/showTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.showTextView}" />

            </com.google.android.flexbox.FlexboxLayout>

            <ImageView
                app:url="@{viewModel.phonePath}"
                android:id="@+id/iv_test"
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_140"
                app:url="@{viewModel.phonePath}" />

        </LinearLayout>

    </ScrollView>


</layout>
